--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "duplicate-image-finder",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
