--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  base = "duplicate-image-finder"
+  base = "."
   command = "npm install && npm run build"
-  publish = "duplicate-image-finder/build"
+  publish = "build"
 
 [build.environment]
   NODE_VERSION = "18"
